Fix custom dot position in title on small screens

--- a/.gen/style.css.sass
+++ b/.gen/style.css.sass
@@ -35,7 +35,6 @@ h1
     margin-left: -5px
     +image-size-by-2("dot.png")
     background-size: 100% 100%
-    z-index: 2
 
 h2
   margin: 20px 0 15px 0
@@ -205,6 +204,7 @@ pre
     .compass
       +scale(0.8)
       bottom: 10px
+      margin-left: -6px
   .meta
     .github
       margin-left: (78px - 42px) / 2
@@ -217,4 +217,4 @@ pre
       top: -2px
       left: -35px
     .compass
-      margin-top: 60px
+      margin-top: -60px
